got profile pics working and crop/resizing to 150x150

--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -222,12 +222,24 @@ a.tag {
   float: right;
   text-align: right; }
 
+h1#profile {
+  margin-top: .5rem; }
+
+#profile_pic {
+  border-radius: 50%;
+  margin-right: 2rem;
+  margin-top: .6rem;
+  float: left; }
+
 #details {
-  margin: 1.5rem auto 2.5rem auto; }
+  margin-bottom: 2.5rem;
+  margin-top: 0; }
   #details i {
     z-index: -1;
     color: #ccc;
     vertical-align: text-bottom;
+    margin-right: .5rem; }
+  #details .floe {
     margin-right: .5rem; }
 
 .info {
@@ -405,3 +417,5 @@ img.preview {
 
 .error {
   color: #FA4866; }
+
+/*# sourceMappingURL=../../../../../../../static/zines/style.css.map */
