--- a/zines/templates/zines/profile.html
+++ b/zines/templates/zines/profile.html
@@ -18,14 +18,11 @@
 
 {% block body %}
     {% load static %}
-    {% load thumbnail %}
     <div class="row">
         {% if profile.pic %}
-            {% thumbnail profile.pic "100x100" crop="center" as im %}
-                <img id="profile_pic" src="{{ im.url }}"/>
-            {% endthumbnail %}
+            <a href="{{ profile.pic.url }}"><img id="profile_pic" src="{{ profile.thumb.url }}"/></a>
         {% endif %}
-        <h1>{{ profile }}</h1>
+        <h1 id="profile">{{ profile }}</h1>
         <div class="row flex" id="details">
             <div class="floe">
                 <i class="material-icons md-30">date_range</i>
