--- a/zines/templates/zines/index.html
+++ b/zines/templates/zines/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <a href="{% url 'issue' issue.zine.id issue.number %}">
                             <div class="title">
-                                <span>{{ issue.displayTitle }}</span>
+                                <h3>{{ issue.displayTitle }}</h3>
                             </div>
                         </a>
                     </div>
