--- a/zines/templates/zines/profile.html
+++ b/zines/templates/zines/profile.html
@@ -61,7 +61,7 @@
                     </div>
                     <a href="{% url 'zine' work.zine.id %}">
                         <div class="title">
-                            <span>{{ work.zine.title }}</span>
+                            <h2>{{ work.zine.title }}</h2>
                         </div>
                     </a>
                 </div>
