--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -301,7 +301,7 @@ h1#profile {
     top: 0;
     z-index: 0;
     width: 100%;
-    opacity: .4;
+    opacity: .3;
     background-position: center;
     background-size: cover;
     height: 200px; }
@@ -317,15 +317,25 @@ h1#profile {
     text-align: center;
     height: 200px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 35px;
     font-weight: 100;
-    transition: .15s; }
+    transition: .15s;
+    font-size: 24px;
+    text-shadow: 1px 1px 0px #000; }
     .issue .title a {
       color: inherit; }
     .issue .title:hover {
       background: rgba(255, 255, 255, 0.2); }
+    .issue .title p {
+      opacity: .65;
+      margin: 0; }
+    .issue .title h2, .issue .title h3, .issue .title h4, .issue .title h5 {
+      font-weight: 100;
+      display: block;
+      float: none;
+      margin: 0; }
 
 .page {
   margin-bottom: 1rem; }
