--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -364,7 +364,7 @@ h1#profile {
         top: 0;
         z-index: 0;
         width: 100%;
-        opacity: .4;
+        opacity: .3;
         background-position: center;
         background-size: cover;
         height: 200px;
@@ -381,16 +381,28 @@ h1#profile {
         text-align: center;
         height: 200px;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 35px;
         font-weight: 100;
         transition: .15s;
+        font-size: 24px;
+        text-shadow: 1px 1px 0px #000;
         a {
             color: inherit;
         }
         &:hover {
             background: rgba(255, 255, 255, .2);
+        }
+        p {
+            opacity: .65;
+            margin: 0;
+        }
+        h2,h3,h4,h5 {
+            font-weight: 100;
+            display: block;
+            float: none;
+            margin: 0;
         }
     }
 }
