--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -290,13 +290,13 @@ h1#profile {
 .block {
   margin: 1.5rem 0; }
 
-.issue {
+.banner {
   z-index: -1;
   background-color: #333;
   padding: 0;
   width: 100%;
   height: 200px; }
-  .issue .bg {
+  .banner .bg {
     position: relative;
     top: 0;
     z-index: 0;
@@ -305,7 +305,7 @@ h1#profile {
     background-position: center;
     background-size: cover;
     height: 200px; }
-  .issue .title {
+  .banner .title {
     position: relative;
     z-index: 3000;
     top: -200px;
@@ -324,18 +324,25 @@ h1#profile {
     transition: .15s;
     font-size: 24px;
     text-shadow: 1px 1px 0px #000; }
-    .issue .title a {
+    .banner .title a {
       color: inherit; }
-    .issue .title:hover {
+    .banner .title:hover {
       background: rgba(255, 255, 255, 0.2); }
-    .issue .title p {
+    .banner .title p {
       opacity: .65;
       margin: 0; }
-    .issue .title h2, .issue .title h3, .issue .title h4, .issue .title h5 {
+    .banner .title h2, .banner .title h3, .banner .title h4, .banner .title h5 {
       font-weight: 100;
       display: block;
       float: none;
       margin: 0; }
+  .banner.h130px {
+    height: 130px; }
+    .banner.h130px .bg {
+      height: 130px; }
+    .banner.h130px .title {
+      height: 130px;
+      top: -130px; }
 
 .page {
   margin-bottom: 1rem; }
