--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -72,19 +72,7 @@
     {% if issues %}
         <div class="block">
             {% for issue in issues %}
-                <div class="issue">
-                    <div class="bg" style="background-image: url({% if issue.cover != '' %}{{ issue.cover.url }}{% else %}{{ issue.zine.zine_pic }}{% endif %})">
-                        &nbsp;
-                    </div>
-                    <a href="{% url 'issue' zine.id issue.number %}">
-                        <div class="title">
-                            <div>
-                                <p>{{ issue.pub_date }}</p>
-                                <h2>{{ issue.displayTitle }}</h2>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                {% include 'zines/snippets/banner.html' with entity=issue type='issue' %}
             {% endfor %}
         </div>
     {% else %}
